--- a/index.html
+++ b/index.html
@@ -22,6 +22,36 @@
 </head>
 
 <body>
+	<!-- loader -->
+
+
+	<div id="loading">
+		<div id="loading-center">
+			<div id="loading-center-absolute">
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+				<div class="object"></div>
+			</div>
+		</div>
+	</div>
+
 	<!-- start topbar section -->
 
 	<header id="topbar">
@@ -887,4 +917,5 @@
 	<!-- custom javascript add -->
 	<script src="js/custom.js"></script>
 </body>
+
 </html>
